--- a/themes/custom/masaya_kemmochi_portfolio/html/front.html
+++ b/themes/custom/masaya_kemmochi_portfolio/html/front.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&family=Oswald:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/vendor/destyle.css">
-    <link rel="stylesheet" href="./assets/css/vendor/modaal.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../css/vendor/destyle.css">
+    <link rel="stylesheet" href="../css/vendor/modaal.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -298,9 +298,14 @@
 
 
 
-    <script src="./assets/js/vendor/jquery-3.4.1.min.js"></script>
-    <script src="./assets/js/vendor/modaal.min.js"></script>
-    <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/modules/animation.js"></script>
+    <script src="../js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="../js/vendor/modaal.min.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/modules/animation.js"></script>
 </body>
 </html>
+
+<script src="/masaya-kemmochi-portfolio/themes/custom/masaya_kemmochi_portfolio/js/vendor/jquery-3.4.1.min.js?v=1.x"></script>
+<script src="/masaya-kemmochi-portfolio/themes/custom/masaya_kemmochi_portfolio/js/vendor/modaal.min.js?v=1.x"></script>
+<script src="/masaya-kemmochi-portfolio/themes/custom/masaya_kemmochi_portfolio/js/index.js?v=1.x"></script>
+<script src="/masaya-kemmochi-portfolio/themes/custom/masaya_kemmochi_portfolio/js/modules/animation.js?v=1.x"></script>
